Update to Net5 Add New Counter Page

--- a/All-In-One/Shared/Components/Controls/NavMenu.razor
+++ b/All-In-One/Shared/Components/Controls/NavMenu.razor
@@ -1,7 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components
-@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
-@using AllinOne.Shared.Components
 
 @namespace AllinOne.Shared.Components
 
@@ -35,7 +33,7 @@
             </ViewLink>
         </li>
         <li class="nav-item px-3">
-            <ViewLink class="nav-link" ViewType="typeof(Counter)">
+            <ViewLink class="nav-link" ViewType="typeof(AllinOne.Shared.Components.Counter)">
                 <span class="oi oi-home" aria-hidden="true"></span> Counter
             </ViewLink>
         </li>
