--- a/All-In-One/Shared/Components/Controls/ServerLayout.razor
+++ b/All-In-One/Shared/Components/Controls/ServerLayout.razor
@@ -7,17 +7,19 @@
 
 @namespace AllinOne.Shared.Components
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu />
+        </div>
 
-<div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
-    </div>
+        <div class="main">
+            <div class="top-row px-4">
+                <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            </div>
 
-    <div class="content px-4">
-        Test Content
-        @Body
+            <div class="content px-4">
+                Test Content
+                @Body
+            </div>
+        </div>
     </div>
-</div>
