--- a/All-In-One/Server/Pages/_Host.cshtml
+++ b/All-In-One/Server/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="AllinOne.Server.styles.css" rel="stylesheet" />
 </head>
 <body>
     <app>
