--- a/All-In-One/Shared/Components/Controls/WASMLayout.razor
+++ b/All-In-One/Shared/Components/Controls/WASMLayout.razor
@@ -9,16 +9,20 @@
 
 @namespace AllinOne.Shared.Components
 
-<div class="sidebar">
-    <NavMenu IsWASM="true" />
-</div>
+<div class="page">
 
-<div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+    <div class="sidebar">
+        <NavMenu IsWASM="true" />
     </div>
 
-    <div class="content px-4">
-        @Body
+    <div class="main">
+        <div class="top-row px-4">
+            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        </div>
+
+        <div class="content px-4">
+            @Body
+        </div>
     </div>
+
 </div>
